--- a/todo/index.html
+++ b/todo/index.html
@@ -14,13 +14,17 @@
   </form>
 
   <div>
-    <p>Your items (<span data-bind="text: todos().length"></span>):</p>
+    <p>Your total items (<span data-bind="text: todos().length"></span>):</p>
     <div data-bind="foreach: todos">
       <div>
-        <span data-bind="text: $data"></span>
+        <input type="checkbox" data-bind="checked: isDone" />
+        <span data-bind="text: title"></span>
         <button data-bind="click: $root.removeItem">Remove</button>
       </div>
     </div>
+    <h3>
+      <span data-bind="text: incompleteTodos().length"></span> incomplete item(s)
+    </h3>
   </div>
 
   <!-- scripts -->
